--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-spring.application.name=sample
+spring.application.name=ShopIT
 server.port=8080
+logging.level.org.springframework.web=TRACE
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/shopit
+spring.datasource.username=root
+spring.datasource.password=Ardninahp@1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+#spring.jpa.open-in-view=false
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8083
