--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ server.port=8080
 logging.level.org.springframework.web=TRACE
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/shopit
-spring.datasource.username=root
-spring.datasource.password=Ardninahp@1
+spring.datasource.url=${PRODUCT_SERVICE_DB_URL}
+spring.datasource.username=${PRODUCT_SERVICE_DB_USERNAME}
+spring.datasource.password=${PRODUCT_SERVICE_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 #spring.jpa.open-in-view=false
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:4141
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${USER_SERVICE_URL}
+spring.flyway.baselineOnMigrate = true
