feat: Added Caching in getProductById

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.show-sql=true
 #spring.jpa.open-in-view=false
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${USER_SERVICE_URL}
 spring.flyway.baselineOnMigrate = true
+
+spring.data.redis.host=redis-10151.c14.us-east-1-3.ec2.redns.redis-cloud.com
+spring.data.redis.port=10151
+spring.data.redis.username=default
+spring.data.redis.password=rL95uOKEY5TXOGKHkJE7lp0tAVt4obzQ
+spring.data.redis.database=0
