--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ShopIT
+spring.application.name=ShopIT-ProductService
 server.port=8080
 logging.level.org.springframework.web=TRACE
 
@@ -17,3 +17,7 @@ spring.data.redis.port=10151
 spring.data.redis.username=default
 spring.data.redis.password=rL95uOKEY5TXOGKHkJE7lp0tAVt4obzQ
 spring.data.redis.database=0
+
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
