--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
-spring.application.name=ShopIT-ProductService
+spring.application.name=productservice
 server.port=8080
 logging.level.org.springframework.web=TRACE
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${PRODUCT_SERVICE_DB_URL}
-spring.datasource.username=${PRODUCT_SERVICE_DB_USERNAME}
-spring.datasource.password=${PRODUCT_SERVICE_DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/products
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 #spring.jpa.open-in-view=false
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${USER_SERVICE_URL}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:4141
 spring.flyway.baselineOnMigrate = true
 
-spring.data.redis.host=redis-10151.c14.us-east-1-3.ec2.redns.redis-cloud.com
-spring.data.redis.port=10151
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 spring.data.redis.username=default
-spring.data.redis.password=rL95uOKEY5TXOGKHkJE7lp0tAVt4obzQ
+spring.data.redis.password=password
 spring.data.redis.database=0
 
 eureka.client.fetch-registry=true
