--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,12 @@ spring.data.redis.database=0
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#spring.config.import=classpath:application_qa.properties
+spring.config.import=optional:configserver:http://localhost:8071/
+
+management.endpoints.web.exposure.include=*
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
