feat: latest changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,17 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.config.import=optional:configserver:http://localhost:8071/
 
 management.endpoints.web.exposure.include=*
+management.health.readinessstate.enabled=true
+management.health.livenessstate.enabled=true
+management.endpoint.health.probes.enabled=true
+
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+resilience4j.retry.configs.default.max-attempts=3
+resilience4j.retry.configs.default.wait-duration=500
+resilience4j.retry.configs.default.enable-exponential-backoff=true
+resilience4j.retry.configs.default.exponential-backoff-multiplier=2
+resilience4j.retry.configs.default.retry-exceptions[0]= java.util.concurrent.TimeoutException
